--- a/src/css/helpers/layouts/_style.scss
+++ b/src/css/helpers/layouts/_style.scss
@@ -257,6 +257,9 @@
                 @media (min-width: 500px) {
                     width: 15%;
                 }
+                @media (min-width: 1600px) {
+                    width: 11%;
+                }
             }
     
             @media (min-width: 620px) {
